libs/@local/hql/frontend-jexpr/src/parser/snapshots/hql_frontend_jexpr__parser__expr__test__fn_empty.snap
---
source: libs/@local/hql/frontend-jexpr/src/parser/expr.rs
expression: "[]"
---
[31m[jexpr::parse::array::expected-callee] Error:[0m Expected Callee
   ╭─[<unknown>:1:1]
   │
 1 │ []
   │ ─┬  
   │  ╰── Expected callee
   │ 
   │ Help: The callee is always the first argument in the array
───╯
