libs/@local/hql/frontend-jexpr/src/parser/snapshots/hql_frontend_jexpr__parser__expr__test__object_is_constant.snap
---
source: libs/@local/hql/frontend-jexpr/src/parser/expr.rs
expression: "{\"const\": 42}"
---
Expr {
    kind: Constant(
        Constant {
            value: Value {
                kind: Number(
                    "42",
                ),
                span: SpanId(
                    0,
                ),
            },
            type: None,
        },
    ),
    span: SpanId(
        1,
    ),
}
