libs/@local/hql/frontend-jexpr/src/parser/snapshots/hql_frontend_jexpr__parser__expr__test__object_is_empty.snap
---
source: libs/@local/hql/frontend-jexpr/src/parser/expr.rs
expression: "{}"
---
[31m[jexpr::parse::object::expected-non-empty] Error:[0m Expected Non-Empty
   ╭─[<unknown>:1:1]
   │
 1 │ {}
   │ ─┬  
   │  ╰── Expected a non-empty object
───╯
