libs/@local/hql/frontend-jexpr/src/parser/snapshots/hql_frontend_jexpr__parser__expr__test__string_is_path.snap
---
source: libs/@local/hql/frontend-jexpr/src/parser/expr.rs
expression: "\"symbol\""
---
Expr {
    kind: Path(
        Path {
            segments: [
                Symbol {
                    value: "symbol",
                    span: SpanId(
                        1,
                    ),
                },
            ],
            span: SpanId(
                2,
            ),
        },
    ),
    span: SpanId(
        0,
    ),
}
